[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-rest-gen"
version = "0.0.3"
authors = [
  { name="Ahmad Alobaid", email="ahmad88me@gmail.com" },
]
description = "Rest API Code Generator"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ahmad88me/django-rest-gen"
"Bug Tracker" = "https://github.com/ahmad88me/django-rest-gen/issues"